--- a/src/main/webapp/Calculator.html
+++ b/src/main/webapp/Calculator.html
@@ -10,8 +10,8 @@
          //function that evaluates the digit and return result 
          function solve() 
          { 
-             let x = document.getElementById("result").value 
-             let z = eval(x) 
+             let X = document.getElementById("result").value 
+             let z = eval(X) 
              document.getElementById("result").value = z
          } 
            
